welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:3: error: not found: value sortieTrouvée
while (!sortieTrouvée) {
        ^